chore: include  docker in aproject

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
-version: '3.7'
+version: "3.7"
 
 services:
   api:
-    build: ./docker
-    volumes:
-      - ../:/usr/src/app
-      - ../node_modules:/usr/src/app/node_modules
+    build: .
+    container_name: api_base
+    restart: always
     ports:
       - 3000:3000
       - 9229:9229
-      - 3100:8080
+    volumes: 
+      - .:/usr/app
+
