--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^14.2.0",
     "mongoose": "^6.1.7",
     "passport": "^0.5.2",
